// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurvedTile renders with default values 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      transform=""
    >
      <path
        class="ground"
        d="M -45 0 A 10 10 0 0 1 -55 10 L -54.99999999999999 100 A 100 100 0 0 0 45 0 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M -45 0 A 10 10 0 0 1 -47.928932188134524 7.071067811865475 L -44.39339828220179 10.606601717798211 A 15 15 0 0 0 -40 0 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M -47.928932188134524 7.071067811865475 A 10 10 0 0 1 -55 10 L -55 15 A 15 15 0 0 0 -44.39339828220179 10.606601717798211 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 40 0 A 95 95 0 0 1 32.76855558857224 36.354926074683526 L 37.38795325112868 38.268343236508976 A 100 100 0 0 0 45 0 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 32.76855558857224 36.354926074683526 A 95 95 0 0 1 12.175144212722017 67.175144212722 L 15.710678118654755 70.71067811865474 A 100 100 0 0 0 37.38795325112868 38.268343236508976 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 12.175144212722017 67.175144212722 A 95 95 0 0 1 -18.645073925316467 87.76855558857224 L -16.731656763491017 92.38795325112868 A 100 100 0 0 0 15.710678118654755 70.71067811865474 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M -18.645073925316467 87.76855558857224 A 95 95 0 0 1 -54.99999999999999 95 L -54.99999999999999 100 A 100 100 0 0 0 -16.731656763491017 92.38795325112868 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTile renders with the given parameters for a tile oriented to the left with an angle of 0˚ and a ratio of 1 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      filter="select"
      id="tile"
      transform="rotate(90 100 205)"
    >
      <path
        class="ground"
        d="M 55 150 A 10 10 0 0 1 45 160 L 45.00000000000001 250 A 100 100 0 0 0 145 150 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 140 150 A 95 95 0 0 1 132.76855558857224 186.35492607468353 L 137.3879532511287 188.26834323650897 A 100 100 0 0 0 145 150 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 132.76855558857224 186.35492607468353 A 95 95 0 0 1 112.17514421272202 217.175144212722 L 115.71067811865476 220.71067811865476 A 100 100 0 0 0 137.3879532511287 188.26834323650897 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 112.17514421272202 217.175144212722 A 95 95 0 0 1 81.35492607468353 237.76855558857224 L 83.26834323650898 242.3879532511287 A 100 100 0 0 0 115.71067811865476 220.71067811865476 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 81.35492607468353 237.76855558857224 A 95 95 0 0 1 45.00000000000001 245 L 45.00000000000001 250 A 100 100 0 0 0 83.26834323650898 242.3879532511287 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTile renders with the given parameters for a tile oriented to the left with an angle of 45˚ and a ratio of 1 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      filter="select"
      id="tile"
      transform="rotate(45 100 150)rotate(90 100 205)"
    >
      <path
        class="ground"
        d="M 55 150 A 10 10 0 0 1 45 160 L 45.00000000000001 250 A 100 100 0 0 0 145 150 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 140 150 A 95 95 0 0 1 132.76855558857224 186.35492607468353 L 137.3879532511287 188.26834323650897 A 100 100 0 0 0 145 150 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 132.76855558857224 186.35492607468353 A 95 95 0 0 1 112.17514421272202 217.175144212722 L 115.71067811865476 220.71067811865476 A 100 100 0 0 0 137.3879532511287 188.26834323650897 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 112.17514421272202 217.175144212722 A 95 95 0 0 1 81.35492607468353 237.76855558857224 L 83.26834323650898 242.3879532511287 A 100 100 0 0 0 115.71067811865476 220.71067811865476 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 81.35492607468353 237.76855558857224 A 95 95 0 0 1 45.00000000000001 245 L 45.00000000000001 250 A 100 100 0 0 0 83.26834323650898 242.3879532511287 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTile renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 0.5 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      filter="select"
      id="tile"
      transform=""
    >
      <path
        class="ground"
        d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 115.71067811865476 220.71067811865476 A 100 100 0 0 0 145 150 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 140 150 A 95 95 0 0 1 132.76855558857224 186.35492607468353 L 137.3879532511287 188.26834323650897 A 100 100 0 0 0 145 150 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 132.76855558857224 186.35492607468353 A 95 95 0 0 1 112.17514421272202 217.175144212722 L 115.71067811865476 220.71067811865476 A 100 100 0 0 0 137.3879532511287 188.26834323650897 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTile renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 1 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      filter="select"
      id="tile"
      transform=""
    >
      <path
        class="ground"
        d="M 55 150 A 10 10 0 0 1 45 160 L 45.00000000000001 250 A 100 100 0 0 0 145 150 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 140 150 A 95 95 0 0 1 132.76855558857224 186.35492607468353 L 137.3879532511287 188.26834323650897 A 100 100 0 0 0 145 150 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 132.76855558857224 186.35492607468353 A 95 95 0 0 1 112.17514421272202 217.175144212722 L 115.71067811865476 220.71067811865476 A 100 100 0 0 0 137.3879532511287 188.26834323650897 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 112.17514421272202 217.175144212722 A 95 95 0 0 1 81.35492607468353 237.76855558857224 L 83.26834323650898 242.3879532511287 A 100 100 0 0 0 115.71067811865476 220.71067811865476 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 81.35492607468353 237.76855558857224 A 95 95 0 0 1 45.00000000000001 245 L 45.00000000000001 250 A 100 100 0 0 0 83.26834323650898 242.3879532511287 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTile renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 2 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      filter="select"
      id="tile"
      transform=""
    >
      <path
        class="ground"
        d="M 55 150 A 120 120 0 0 1 19.852813742385706 234.8528137423857 L 83.49242404917499 298.49242404917493 A 210 210 0 0 0 145 150 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M 55 150 A 120 120 0 0 1 52.69423364838765 173.41083864193538 L 57.598160050403806 174.38629025201604 A 125 125 0 0 0 60 150 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 52.69423364838765 173.41083864193538 A 120 120 0 0 1 45.865543901354414 195.92201188381077 L 50.48494156391084 197.83542904563623 A 125 125 0 0 0 57.598160050403806 174.38629025201604 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 45.865543901354414 195.92201188381077 A 120 120 0 0 1 34.77635347630543 216.66842796235227 L 38.93370153781815 219.44627912745028 A 125 125 0 0 0 50.48494156391084 197.83542904563623 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 34.77635347630543 216.66842796235227 A 120 120 0 0 1 19.852813742385706 234.8528137423857 L 23.388347648318444 238.38834764831842 A 125 125 0 0 0 38.93370153781815 219.44627912745028 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 140 150 A 205 205 0 0 1 136.06098248266224 189.9935160133063 L 140.96490888467838 190.96896762338693 A 210 210 0 0 0 145 150 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 136.06098248266224 189.9935160133063 A 205 205 0 0 1 124.39530416481378 228.4501036348434 L 129.0147018273702 230.36352079666887 A 210 210 0 0 0 140.96490888467838 190.96896762338693 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 124.39530416481378 228.4501036348434 A 205 205 0 0 1 105.45127052202179 263.89189776901844 L 109.60861858353451 266.66974893411646 A 210 210 0 0 0 129.0147018273702 230.36352079666887 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 105.45127052202179 263.89189776901844 A 205 205 0 0 1 79.95689014324225 294.9568901432422 L 83.49242404917499 298.49242404917493 A 210 210 0 0 0 109.60861858353451 266.66974893411646 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTile renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 3 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      filter="select"
      id="tile"
      transform=""
    >
      <path
        class="ground"
        d="M 55 150 A 230 230 0 0 1 24.185842870420913 265 L 102.1281292110204 310 A 320 320 0 0 0 145 150 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M 55 150 A 230 230 0 0 1 53.03231811597638 180.02102421061187 L 57.98954242284543 180.6736551717121 A 235 235 0 0 0 60 150 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 53.03231811597638 180.02102421061187 A 230 230 0 0 1 47.162940046485716 209.52838037357978 L 51.992569177931045 210.82247559909237 A 235 235 0 0 0 57.98954242284543 180.6736551717121 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 47.162940046485716 209.52838037357978 A 230 230 0 0 1 37.49229247759595 238.01718944397066 L 42.111690140152376 239.9306066057961 A 235 235 0 0 0 51.992569177931045 210.82247559909237 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 37.49229247759595 238.01718944397066 A 230 230 0 0 1 24.185842870420913 265 L 28.515969889343097 267.5 A 235 235 0 0 0 42.111690140152376 239.9306066057961 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 140 150 A 315 315 0 0 1 137.30513133275025 191.11575054931626 L 142.26235563961933 191.7683815104165 A 320 320 0 0 0 145 150 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 137.30513133275025 191.11575054931626 A 315 315 0 0 1 129.2666352810565 231.52799920729404 L 134.09626441250185 232.82209443280664 A 320 320 0 0 0 142.26235563961933 191.7683815104165 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 129.2666352810565 231.52799920729404 A 315 315 0 0 1 116.02205274105535 270.54528119500327 L 120.64145040361177 272.45869835682873 A 320 320 0 0 0 134.09626441250185 232.82209443280664 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 116.02205274105535 270.54528119500327 A 315 315 0 0 1 97.79800219209818 307.5 L 102.1281292110204 310 A 320 320 0 0 0 120.64145040361177 272.45869835682873 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTile renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 4 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      filter="select"
      id="tile"
      transform=""
    >
      <path
        class="ground"
        d="M 55 150 A 340 340 0 0 1 29.119041053837464 280.11236700413053 L 112.26819897985331 314.5538759169886 A 430 430 0 0 0 145 150 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M 55 150 A 340 340 0 0 1 53.36280706854694 183.3258277120506 L 58.338730701907934 183.8159134136984 A 345 345 0 0 0 60 150 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 53.36280706854694 183.3258277120506 A 340 340 0 0 1 48.46699533709835 216.33070948548362 L 53.37092173911452 217.30616109556425 A 345 345 0 0 0 58.338730701907934 183.8159134136984 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 48.46699533709835 216.33070948548362 A 340 340 0 0 1 40.359714148951014 248.6967902665172 L 45.14441582761202 250.1482136527895 A 345 345 0 0 0 53.37092173911452 217.30616109556425 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 40.359714148951014 248.6967902665172 A 340 340 0 0 1 29.119041053837464 280.11236700413053 L 33.738438716393944 282.025784165956 A 345 345 0 0 0 45.14441582761202 250.1482136527895 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 140 150 A 425 425 0 0 1 137.9535088356837 191.65728464006327 L 142.92943246904468 192.14737034171105 A 430 430 0 0 0 145 150 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 137.9535088356837 191.65728464006327 A 425 425 0 0 1 131.83374417137293 232.91338685685452 L 136.7376705733891 233.88883846693514 A 430 430 0 0 0 142.92943246904468 192.14737034171105 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 131.83374417137293 232.91338685685452 A 425 425 0 0 1 121.69964268618872 273.3709878331465 L 126.48434436484979 274.82241121941877 A 430 430 0 0 0 136.7376705733891 233.88883846693514 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 121.69964268618872 273.3709878331465 A 425 425 0 0 1 107.64880131729689 312.6404587551632 L 112.26819897985331 314.5538759169886 A 430 430 0 0 0 126.48434436484979 274.82241121941877 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTile renders with the given parameters for a tile oriented to the right with an angle of 45˚ and a ratio of 1 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      filter="select"
      id="tile"
      transform="rotate(45 100 150)"
    >
      <path
        class="ground"
        d="M 55 150 A 10 10 0 0 1 45 160 L 45.00000000000001 250 A 100 100 0 0 0 145 150 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 140 150 A 95 95 0 0 1 132.76855558857224 186.35492607468353 L 137.3879532511287 188.26834323650897 A 100 100 0 0 0 145 150 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 132.76855558857224 186.35492607468353 A 95 95 0 0 1 112.17514421272202 217.175144212722 L 115.71067811865476 220.71067811865476 A 100 100 0 0 0 137.3879532511287 188.26834323650897 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 112.17514421272202 217.175144212722 A 95 95 0 0 1 81.35492607468353 237.76855558857224 L 83.26834323650898 242.3879532511287 A 100 100 0 0 0 115.71067811865476 220.71067811865476 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 81.35492607468353 237.76855558857224 A 95 95 0 0 1 45.00000000000001 245 L 45.00000000000001 250 A 100 100 0 0 0 83.26834323650898 242.3879532511287 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTile updates when the parameter angle is modified 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      filter="select"
      id="tile"
      transform="rotate(45 100 150)"
    >
      <path
        class="ground"
        d="M 55 150 A 10 10 0 0 1 45 160 L 45.00000000000001 250 A 100 100 0 0 0 145 150 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 140 150 A 95 95 0 0 1 132.76855558857224 186.35492607468353 L 137.3879532511287 188.26834323650897 A 100 100 0 0 0 145 150 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 132.76855558857224 186.35492607468353 A 95 95 0 0 1 112.17514421272202 217.175144212722 L 115.71067811865476 220.71067811865476 A 100 100 0 0 0 137.3879532511287 188.26834323650897 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 112.17514421272202 217.175144212722 A 95 95 0 0 1 81.35492607468353 237.76855558857224 L 83.26834323650898 242.3879532511287 A 100 100 0 0 0 115.71067811865476 220.71067811865476 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 81.35492607468353 237.76855558857224 A 95 95 0 0 1 45.00000000000001 245 L 45.00000000000001 250 A 100 100 0 0 0 83.26834323650898 242.3879532511287 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTile updates when the parameter direction is modified 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      filter="select"
      id="tile"
      transform="rotate(90 100 205)"
    >
      <path
        class="ground"
        d="M 55 150 A 10 10 0 0 1 45 160 L 45.00000000000001 250 A 100 100 0 0 0 145 150 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 140 150 A 95 95 0 0 1 132.76855558857224 186.35492607468353 L 137.3879532511287 188.26834323650897 A 100 100 0 0 0 145 150 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 132.76855558857224 186.35492607468353 A 95 95 0 0 1 112.17514421272202 217.175144212722 L 115.71067811865476 220.71067811865476 A 100 100 0 0 0 137.3879532511287 188.26834323650897 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 112.17514421272202 217.175144212722 A 95 95 0 0 1 81.35492607468353 237.76855558857224 L 83.26834323650898 242.3879532511287 A 100 100 0 0 0 115.71067811865476 220.71067811865476 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 81.35492607468353 237.76855558857224 A 95 95 0 0 1 45.00000000000001 245 L 45.00000000000001 250 A 100 100 0 0 0 83.26834323650898 242.3879532511287 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTile updates when the parameter ratio is modified 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      filter="select"
      id="tile"
      transform=""
    >
      <path
        class="ground"
        d="M 55 150 A 120 120 0 0 1 19.852813742385706 234.8528137423857 L 83.49242404917499 298.49242404917493 A 210 210 0 0 0 145 150 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M 55 150 A 120 120 0 0 1 52.69423364838765 173.41083864193538 L 57.598160050403806 174.38629025201604 A 125 125 0 0 0 60 150 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 52.69423364838765 173.41083864193538 A 120 120 0 0 1 45.865543901354414 195.92201188381077 L 50.48494156391084 197.83542904563623 A 125 125 0 0 0 57.598160050403806 174.38629025201604 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 45.865543901354414 195.92201188381077 A 120 120 0 0 1 34.77635347630543 216.66842796235227 L 38.93370153781815 219.44627912745028 A 125 125 0 0 0 50.48494156391084 197.83542904563623 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 34.77635347630543 216.66842796235227 A 120 120 0 0 1 19.852813742385706 234.8528137423857 L 23.388347648318444 238.38834764831842 A 125 125 0 0 0 38.93370153781815 219.44627912745028 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 140 150 A 205 205 0 0 1 136.06098248266224 189.9935160133063 L 140.96490888467838 190.96896762338693 A 210 210 0 0 0 145 150 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 136.06098248266224 189.9935160133063 A 205 205 0 0 1 124.39530416481378 228.4501036348434 L 129.0147018273702 230.36352079666887 A 210 210 0 0 0 140.96490888467838 190.96896762338693 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 124.39530416481378 228.4501036348434 A 205 205 0 0 1 105.45127052202179 263.89189776901844 L 109.60861858353451 266.66974893411646 A 210 210 0 0 0 129.0147018273702 230.36352079666887 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 105.45127052202179 263.89189776901844 A 205 205 0 0 1 79.95689014324225 294.9568901432422 L 83.49242404917499 298.49242404917493 A 210 210 0 0 0 109.60861858353451 266.66974893411646 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTile updates when the parameter x is modified 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      filter="select"
      id="tile"
      transform=""
    >
      <path
        class="ground"
        d="M -5 150 A 10 10 0 0 1 -15 160 L -14.999999999999995 250 A 100 100 0 0 0 85 150 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M -5 150 A 10 10 0 0 1 -7.9289321881345245 157.07106781186548 L -4.393398282201787 160.6066017177982 A 15 15 0 0 0 0 150 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M -7.9289321881345245 157.07106781186548 A 10 10 0 0 1 -15 160 L -14.999999999999998 165 A 15 15 0 0 0 -4.393398282201787 160.6066017177982 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 80 150 A 95 95 0 0 1 72.76855558857224 186.35492607468353 L 77.38795325112868 188.26834323650897 A 100 100 0 0 0 85 150 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 72.76855558857224 186.35492607468353 A 95 95 0 0 1 52.17514421272202 217.175144212722 L 55.710678118654755 220.71067811865476 A 100 100 0 0 0 77.38795325112868 188.26834323650897 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 52.17514421272202 217.175144212722 A 95 95 0 0 1 21.354926074683533 237.76855558857224 L 23.268343236508983 242.3879532511287 A 100 100 0 0 0 55.710678118654755 220.71067811865476 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 21.354926074683533 237.76855558857224 A 95 95 0 0 1 -14.999999999999995 245 L -14.999999999999995 250 A 100 100 0 0 0 23.268343236508983 242.3879532511287 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTile updates when the parameter y is modified 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      filter="select"
      id="tile"
      transform=""
    >
      <path
        class="ground"
        d="M 55 40 A 10 10 0 0 1 45 50 L 45.00000000000001 140 A 100 100 0 0 0 145 40 Z"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk even"
          d="M 55 40 A 10 10 0 0 1 52.071067811865476 47.071067811865476 L 55.60660171779821 50.60660171779821 A 15 15 0 0 0 60 40 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 52.071067811865476 47.071067811865476 A 10 10 0 0 1 45 50 L 45 55 A 15 15 0 0 0 55.60660171779821 50.60660171779821 Z"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          class="barrier-chunk odd"
          d="M 140 40 A 95 95 0 0 1 132.76855558857224 76.35492607468353 L 137.3879532511287 78.26834323650897 A 100 100 0 0 0 145 40 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 132.76855558857224 76.35492607468353 A 95 95 0 0 1 112.17514421272202 107.175144212722 L 115.71067811865476 110.71067811865474 A 100 100 0 0 0 137.3879532511287 78.26834323650897 Z"
        />
        
        <path
          class="barrier-chunk odd"
          d="M 112.17514421272202 107.175144212722 A 95 95 0 0 1 81.35492607468353 127.76855558857224 L 83.26834323650898 132.3879532511287 A 100 100 0 0 0 115.71067811865476 110.71067811865474 Z"
        />
        
        <path
          class="barrier-chunk even"
          d="M 81.35492607468353 127.76855558857224 A 95 95 0 0 1 45.00000000000001 135 L 45.00000000000001 140 A 100 100 0 0 0 83.26834323650898 132.3879532511287 Z"
        />
      </g>
    </g>
    
  </div>
</body>
`;
